fix: Collapse style issue when expandIconPosition is right (#32648)

--- a/components/collapse/style/index.less
+++ b/components/collapse/style/index.less
@@ -69,6 +69,7 @@
   &-icon-position-right {
     & > .@{collapse-prefix-cls}-item {
       > .@{collapse-prefix-cls}-header {
+        position: relative;
         padding: @collapse-header-padding;
         padding-right: @collapse-header-padding-extra;
 
